fix: test and polish
