# internal/models/interfaces/quiz_suite.go
@@ -1,9 +1,0 @@
-package interfaces
-
-// QuizSuiteInterface defines the interface for QuizSuite models
-type QuizSuiteInterface interface {
-	GetID() uint
-	GetTitle() string
-	GetDescription() string
-	GetCreatedByID() uint
-} 
